--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -9,7 +9,7 @@
 }
 
 .footer-content {
-    display: flex;
+    /* display: flex; */
     justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
