--- a/src/pages/homePage.css
+++ b/src/pages/homePage.css
@@ -1,6 +1,6 @@
 .content {
-    display: flex;
-    flex-direction: row;
+    /* display: flex; */
+    /* flex-direction: row; */
     justify-content: center;
     align-items: flex-start; /* Align items to the top */
     flex-wrap: wrap;
