--- a/src/pages/world.css
+++ b/src/pages/world.css
@@ -38,7 +38,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    background-color: rgb(64, 59, 59);
+    /* background-color: rgb(64, 59, 59); */
     gap: 10px;
     
   }
